--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "sass": "sass src/sass/main.scss:dist/css/styles.css --style=compressed",
+    "sass": "sass src/sass/main.scss:dist/css/styles.css --style=compressed --watch",
     "terser": "terser src/js/script.js --compress --output dist/js/bigTings.js"
   },
   "keywords": [],
