--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "sass": "sass src/sass/main.scss:dist/css/styles.css --style=compressed --watch",
-    "terser": "terser src/js/script.js --compress --output dist/js/bigTings.js"
+    "terser": "terser src/js/script.js --compress --output dist/js/script.js"
   },
   "keywords": [],
   "author": "",
